--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <body>
 
-<script language='JavaScript'>document.location = 'https://icp.me'</script>
+<script language='JavaScript'>document.location = 'https://icp.me/domains.html'</script>
 
 </body>
 
